# HolaMundoDeNuevo

./: com.github.MatiasKottwitz.HolaMundoDeNuevo.yml  meson.build
.flatpak-builder/cache/: summary  summary.idx
.flatpak-builder/cache/refs/heads/app/com.github.MatiasKottwitz.HolaMundoDeNuevo/x86_64/: master
.flatpak-builder/cache/refs/heads/runtime/com.github.MatiasKottwitz.HolaMundoDeNuevo.Debug/x86_64/: master
.flatpak-builder/cache/refs/heads/runtime/com.github.MatiasKottwitz.HolaMundoDeNuevo.Locale/x86_64/: master
.flatpak-builder/cache/refs/heads/x86_64-com.github.MatiasKottwitz.HolaMundoDeNuevo.yml/: build-HolaMundoDeNuevo  cleanup  finish  init
.flatpak-builder/cache/summaries/: 0f40541e2d28e328320c6accba25787680562328f81879cf0e317a8ae7a7cb2d-ed543d7b141a9dc5c468c496724eadb99405bc70a83c8ef9c5ba219d72691ab2.delta  1d10c43e41c1228b3ec7fc2870e59cfd9696c4f5a29a7353c1683e87ca088bf0-ed543d7b141a9dc5c468c496724eadb99405bc70a83c8ef9c5ba219d72691ab2.delta  55b789c516823873809926e86e5f86321abfa3fe8496adece6a4c6ce31982429-ed543d7b141a9dc5c468c496724eadb99405bc70a83c8ef9c5ba219d72691ab2.delta  5755b34cbdb68a706c41ebdceb8a199a0f7da14f38069a0250b4c4bbef84c981-ed543d7b141a9dc5c468c496724eadb99405bc70a83c8ef9c5ba219d72691ab2.delta  7357dfbc8a6b4a28dfda6206a4105affea9c06bf7e9bc09813e5f41cf3d1376e-ca395b0467919d984e71c9fe5a9d171290243f4bff18d0bd1eada84d21e5bbfe.delta  7357dfbc8a6b4a28dfda6206a4105affea9c06bf7e9bc09813e5f41cf3d1376e-ed543d7b141a9dc5c468c496724eadb99405bc70a83c8ef9c5ba219d72691ab2.delta  9408e06537db214de35bfddd4af0bcacf223b3ead8c46d518b4cbebeb9818917-ed543d7b141a9dc5c468c496724eadb99405bc70a83c8ef9c5ba219d72691ab2.delta  eaf95c7bd48cf5d04dd905cd31e3c4fcce9213adcdc884655ad0de704374594f-ca395b0467919d984e71c9fe5a9d171290243f4bff18d0bd1eada84d21e5bbfe.delta  ed543d7b141a9dc5c468c496724eadb99405bc70a83c8ef9c5ba219d72691ab2-ca395b0467919d984e71c9fe5a9d171290243f4bff18d0bd1eada84d21e5bbfe.delta  f4ca611b18fac0c626ea0275e1ad04ea447302755899c05f4d6aea95f9b7491e-ed543d7b141a9dc5c468c496724eadb99405bc70a83c8ef9c5ba219d72691ab2.delta  f5c465f7f6cbbf2184a9b8e461d336fdbbb540930328304e21baea79c1bd9014-ca395b0467919d984e71c9fe5a9d171290243f4bff18d0bd1eada84d21e5bbfe.delta
.flatpak-builder/checksums/: x86_64-com.github.MatiasKottwitz.HolaMundoDeNuevo.yml
.github/workflows/: main.yml
data/: hello-again.desktop  hello-again.desktop.in  hello-again.metainfo.xml.in
po/: POTFILES  com.github.MatiasKottwitz.HolaMundoDeNuevo.pot  de.po  de.po~  en.po  en.po~
src/: Aplication  Aplication.vala  Aplication.vala~
